{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 144,
  "lineage": "f501389e-c159-2ba7-d0df-6966c644738c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0accf74138fdaa84d",
            "arn": "arn:aws:ec2:us-west-2:665832050599:elastic-ip/eipalloc-0accf74138fdaa84d",
            "association_id": "eipassoc-0e5ff4dd6bd2cd790",
            "domain": "vpc",
            "id": "eipalloc-0accf74138fdaa84d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ef9324de333a7236",
            "private_dns": "ip-10-0-1-211.us-west-2.compute.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-44-237-132-161.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.132.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "multitenant-ai-poc-nat-eip-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd9138df23d4d83a",
            "arn": "arn:aws:ec2:us-west-2:665832050599:elastic-ip/eipalloc-0cd9138df23d4d83a",
            "association_id": "eipassoc-0cce3213fa5ea9acc",
            "domain": "vpc",
            "id": "eipalloc-0cd9138df23d4d83a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-018a866d7facef4c3",
            "private_dns": "ip-10-0-2-243.us-west-2.compute.internal",
            "private_ip": "10.0.2.243",
            "public_dns": "ec2-35-162-182-114.us-west-2.compute.amazonaws.com",
            "public_ip": "35.162.182.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "multitenant-ai-poc-nat-eip-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "poc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d0e9b42d58b4a60",
            "arn": "arn:aws:ec2:us-west-2:665832050599:elastic-ip/eipalloc-00d0e9b42d58b4a60",
            "association_id": "eipassoc-0556398fd3c7faf1d",
            "domain": "vpc",
            "id": "eipalloc-00d0e9b42d58b4a60",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01312d258830c27f0",
            "private_dns": "ip-10-0-10-227.us-west-2.compute.internal",
            "private_ip": "10.0.10.227",
            "public_dns": "ec2-34-214-40-18.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.40.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-poc-nat-eip-1"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-poc-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.poc_isolated",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa97f5e66c9a0f7",
            "arn": "arn:aws:ec2:us-west-2:665832050599:elastic-ip/eipalloc-04fa97f5e66c9a0f7",
            "association_id": "eipassoc-0000104ec1688b0cd",
            "domain": "vpc",
            "id": "eipalloc-04fa97f5e66c9a0f7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a12b988d025bed20",
            "private_dns": "ip-10-0-11-14.us-west-2.compute.internal",
            "private_ip": "10.0.11.14",
            "public_dns": "ec2-44-254-34-213.us-west-2.compute.amazonaws.com",
            "public_ip": "44.254.34.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-poc-nat-eip-2"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-poc-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.poc_isolated",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:internet-gateway/igw-03d11d3d4a8937b6f",
            "id": "igw-03d11d3d4a8937b6f",
            "owner_id": "665832050599",
            "tags": {
              "Name": "multitenant-ai-poc-igw"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-igw"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:internet-gateway/igw-084a10845d8edb6c9",
            "id": "igw-084a10845d8edb6c9",
            "owner_id": "665832050599",
            "tags": {
              "Name": "multitenant-ai-poc-poc-isolated-igw"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-poc-isolated-igw"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/multitenant-ai-poc-alb/9463049ef2d3698c",
            "arn_suffix": "app/multitenant-ai-poc-alb/9463049ef2d3698c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multitenant-ai-poc-alb-498497460.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/multitenant-ai-poc-alb/9463049ef2d3698c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multitenant-ai-poc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-044dd96afcd38665f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b39fcfacd383bf7"
              },
              {
                "subnet_id": "subnet-0c51800853ea811b7"
              }
            ],
            "subnets": [
              "subnet-06b39fcfacd383bf7",
              "subnet-0c51800853ea811b7"
            ],
            "tags": {
              "Name": "multitenant-ai-poc-alb"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-alb"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "poc_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/mtai-poc-shared-alb/3893cf25a9d62f95",
            "arn_suffix": "app/mtai-poc-shared-alb/3893cf25a9d62f95",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mtai-poc-shared-alb-1509838146.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/mtai-poc-shared-alb/3893cf25a9d62f95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mtai-poc-shared-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fba672c4ac9b3555"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0285f9bf83038a4a3"
              },
              {
                "subnet_id": "subnet-0a3d2515635373446"
              }
            ],
            "subnets": [
              "subnet-0285f9bf83038a4a3",
              "subnet-0a3d2515635373446"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "multitenant-ai-poc-poc-shared-alb"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "multitenant-ai-poc-poc-shared-alb"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.shared_alb",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:listener/app/multitenant-ai-poc-alb/9463049ef2d3698c/3f0518ca699cc16b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-tg/ce7d62d53ce23984",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:listener/app/multitenant-ai-poc-alb/9463049ef2d3698c/3f0518ca699cc16b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/multitenant-ai-poc-alb/9463049ef2d3698c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "poc_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:listener/app/mtai-poc-shared-alb/3893cf25a9d62f95/ec7928a5fd00e2e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-poc-shared-tg/3320c89ca4672138",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:listener/app/mtai-poc-shared-alb/3893cf25a9d62f95/ec7928a5fd00e2e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/mtai-poc-shared-alb/3893cf25a9d62f95",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.poc_shared",
            "aws_lb_target_group.poc_shared",
            "aws_security_group.shared_alb",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-tg/ce7d62d53ce23984",
            "arn_suffix": "targetgroup/multitenant-ai-poc-tg/ce7d62d53ce23984",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-tg/ce7d62d53ce23984",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/multitenant-ai-poc-alb/9463049ef2d3698c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multitenant-ai-poc-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-target-group"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "poc_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-poc-shared-tg/3320c89ca4672138",
            "arn_suffix": "targetgroup/multitenant-ai-poc-poc-shared-tg/3320c89ca4672138",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:665832050599:targetgroup/multitenant-ai-poc-poc-shared-tg/3320c89ca4672138",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:665832050599:loadbalancer/app/mtai-poc-shared-alb/3893cf25a9d62f95"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "multitenant-ai-poc-poc-shared-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-poc-shared-target-group"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-poc-shared-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0accf74138fdaa84d",
            "association_id": "eipassoc-0e5ff4dd6bd2cd790",
            "connectivity_type": "public",
            "id": "nat-0bc327f144c08633a",
            "network_interface_id": "eni-0ef9324de333a7236",
            "private_ip": "10.0.1.211",
            "public_ip": "44.237.132.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06b39fcfacd383bf7",
            "tags": {
              "Name": "multitenant-ai-poc-nat-gateway-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd9138df23d4d83a",
            "association_id": "eipassoc-0cce3213fa5ea9acc",
            "connectivity_type": "public",
            "id": "nat-069a99490c88d318a",
            "network_interface_id": "eni-018a866d7facef4c3",
            "private_ip": "10.0.2.243",
            "public_ip": "35.162.182.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c51800853ea811b7",
            "tags": {
              "Name": "multitenant-ai-poc-nat-gateway-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "poc_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d0e9b42d58b4a60",
            "association_id": "eipassoc-0556398fd3c7faf1d",
            "connectivity_type": "public",
            "id": "nat-0496db6a1756d99c3",
            "network_interface_id": "eni-01312d258830c27f0",
            "private_ip": "10.0.10.227",
            "public_ip": "34.214.40.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3d2515635373446",
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-poc-nat-gateway-1"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-poc-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fa97f5e66c9a0f7",
            "association_id": "eipassoc-0000104ec1688b0cd",
            "connectivity_type": "public",
            "id": "nat-07ad567ad2953bd91",
            "network_interface_id": "eni-0a12b988d025bed20",
            "private_ip": "10.0.11.14",
            "public_ip": "44.254.34.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0285f9bf83038a4a3",
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-poc-nat-gateway-2"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-poc-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-081de537ead14c0a9",
            "id": "rtb-081de537ead14c0a9",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bc327f144c08633a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-private-rt-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-0dec074785abb3311",
            "id": "rtb-0dec074785abb3311",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-069a99490c88d318a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-private-rt-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-0f5c38c07fd8a1ad0",
            "id": "rtb-0f5c38c07fd8a1ad0",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d11d3d4a8937b6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-public-rt"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-013ff64a3fdcb392e",
            "id": "rtb-013ff64a3fdcb392e",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0496db6a1756d99c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-private-rt-1"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_nat_gateway.poc_isolated",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-01b2d3f10ad67a39a",
            "id": "rtb-01b2d3f10ad67a39a",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ad567ad2953bd91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-private-rt-2"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_nat_gateway.poc_isolated",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:route-table/rtb-0011687ec2cf58bfa",
            "id": "rtb-0011687ec2cf58bfa",
            "owner_id": "665832050599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084a10845d8edb6c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "multitenant-ai-poc-shared-public-rt"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-shared-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.poc_isolated",
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0835df9fcbe2f876e",
            "route_table_id": "rtb-081de537ead14c0a9",
            "subnet_id": "subnet-05c6ace803abfb1ac"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0ef0b4085804d75",
            "route_table_id": "rtb-0dec074785abb3311",
            "subnet_id": "subnet-03ea1eb7dcdd58c92"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b2e5b9fbc32960",
            "route_table_id": "rtb-0f5c38c07fd8a1ad0",
            "subnet_id": "subnet-06b39fcfacd383bf7"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e86ecdf30fed772a",
            "route_table_id": "rtb-0f5c38c07fd8a1ad0",
            "subnet_id": "subnet-0c51800853ea811b7"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f897b3256103258e",
            "route_table_id": "rtb-013ff64a3fdcb392e",
            "subnet_id": "subnet-0500891f4e55871fa"
          },
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_nat_gateway.poc_isolated",
            "aws_route_table.shared_private",
            "aws_subnet.shared_private",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b665212ce69876a1",
            "route_table_id": "rtb-01b2d3f10ad67a39a",
            "subnet_id": "subnet-0dab7b9a9956fd606"
          },
          "dependencies": [
            "aws_eip.poc_nat",
            "aws_internet_gateway.poc_isolated",
            "aws_nat_gateway.poc_isolated",
            "aws_route_table.shared_private",
            "aws_subnet.shared_private",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007a000a1d43c0fb5",
            "route_table_id": "rtb-0011687ec2cf58bfa",
            "subnet_id": "subnet-0a3d2515635373446"
          },
          "dependencies": [
            "aws_internet_gateway.poc_isolated",
            "aws_route_table.shared_public",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f882306be3e7728",
            "route_table_id": "rtb-0011687ec2cf58bfa",
            "subnet_id": "subnet-0285f9bf83038a4a3"
          },
          "dependencies": [
            "aws_internet_gateway.poc_isolated",
            "aws_route_table.shared_public",
            "aws_subnet.shared_public",
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-044dd96afcd38665f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044dd96afcd38665f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multitenant-ai-poc-alb-2025092919322406920000000c",
            "name_prefix": "multitenant-ai-poc-alb-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-alb-sg"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-003008ff5a94e42ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003008ff5a94e42ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-044dd96afcd38665f"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "multitenant-ai-poc-ecs-20250929193232286300000012",
            "name_prefix": "multitenant-ai-poc-ecs-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-ecs-sg"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-05f6505fa34896496",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f6505fa34896496",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003008ff5a94e42ef"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "multitenant-ai-poc-rds-20250929193236319200000017",
            "name_prefix": "multitenant-ai-poc-rds-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-rds-sg"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0d9b7d2bbd0c98d02",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d9b7d2bbd0c98d02",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003008ff5a94e42ef"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "multitenant-ai-poc-redis-20250929193235996000000016",
            "name_prefix": "multitenant-ai-poc-redis-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-redis-sg"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0fba672c4ac9b3555",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fba672c4ac9b3555",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "multitenant-ai-poc-poc-shared-alb-20250929193222811400000009",
            "name_prefix": "multitenant-ai-poc-poc-shared-alb-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-poc-shared-alb-sg"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-poc-shared-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tenant_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0494ef0e2c991a114",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0494ef0e2c991a114",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "multitenant-ai-poc-tenant-1-eks-2025092919322360110000000b",
            "name_prefix": "multitenant-ai-poc-tenant-1-eks-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-1-eks-sg",
              "Tenant": "tenant-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-1-eks-sg",
              "Tenant": "tenant-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_isolated"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0536d2b7fe71b40db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0536d2b7fe71b40db",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "multitenant-ai-poc-tenant-2-eks-2025092919322281260000000a",
            "name_prefix": "multitenant-ai-poc-tenant-2-eks-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-2-eks-sg",
              "Tenant": "tenant-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-2-eks-sg",
              "Tenant": "tenant-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tenant_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0b85a5ab8e25b9fa7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b85a5ab8e25b9fa7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0494ef0e2c991a114"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "multitenant-ai-poc-tenant-1-rds-20250929193232287500000013",
            "name_prefix": "multitenant-ai-poc-tenant-1-rds-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-1-rds-sg",
              "Tenant": "tenant-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-1-rds-sg",
              "Tenant": "tenant-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tenant_eks",
            "aws_vpc.poc_isolated"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0c063ec0a8136e36f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c063ec0a8136e36f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536d2b7fe71b40db"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "multitenant-ai-poc-tenant-2-rds-20250929193231295600000010",
            "name_prefix": "multitenant-ai-poc-tenant-2-rds-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-2-rds-sg",
              "Tenant": "tenant-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-2-rds-sg",
              "Tenant": "tenant-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tenant_eks",
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tenant_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-0990ad8a9bc7bed96",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0990ad8a9bc7bed96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0494ef0e2c991a114"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "multitenant-ai-poc-tenant-1-redis-2025092919323068100000000f",
            "name_prefix": "multitenant-ai-poc-tenant-1-redis-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-1-redis-sg",
              "Tenant": "tenant-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-1-redis-sg",
              "Tenant": "tenant-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tenant_eks",
            "aws_vpc.poc_isolated"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:security-group/sg-04f1567bb1db7f214",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04f1567bb1db7f214",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536d2b7fe71b40db"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "multitenant-ai-poc-tenant-2-redis-20250929193231850200000011",
            "name_prefix": "multitenant-ai-poc-tenant-2-redis-",
            "owner_id": "665832050599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "multitenant-ai-poc-tenant-2-redis-sg",
              "Tenant": "tenant-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-tenant-2-redis-sg",
              "Tenant": "tenant-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tenant_eks",
            "aws_vpc.poc_isolated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-05c6ace803abfb1ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6ace803abfb1ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multitenant-ai-poc-private-subnet-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-private-subnet-1"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-03ea1eb7dcdd58c92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ea1eb7dcdd58c92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multitenant-ai-poc-private-subnet-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-private-subnet-2"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-06b39fcfacd383bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b39fcfacd383bf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multitenant-ai-poc-public-subnet-1"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-public-subnet-1"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0c51800853ea811b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c51800853ea811b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "multitenant-ai-poc-public-subnet-2"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-public-subnet-2"
            },
            "vpc_id": "vpc-05e62cd728f70c2a9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shared_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0500891f4e55871fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0500891f4e55871fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-private-subnet-1",
              "Type": "shared-private"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-private-subnet-1",
              "Type": "shared-private"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0dab7b9a9956fd606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dab7b9a9956fd606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-private-subnet-2",
              "Type": "shared-private"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-private-subnet-2",
              "Type": "shared-private"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shared_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0a3d2515635373446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3d2515635373446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-public-subnet-1",
              "Type": "shared-public"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-shared-public-subnet-1",
              "Type": "shared-public"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0285f9bf83038a4a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0285f9bf83038a4a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-public-subnet-2",
              "Type": "shared-public"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-shared-public-subnet-2",
              "Type": "shared-public"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tenant_dedicated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-0c527ce26f7476749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c527ce26f7476749",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-tenant-1-subnet",
              "Tenant": "tenant-1",
              "Type": "dedicated"
            },
            "tags_all": {
              "AZ": "us-west-2a",
              "Name": "multitenant-ai-poc-tenant-1-subnet",
              "Tenant": "tenant-1",
              "Type": "dedicated"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:subnet/subnet-08752e1ee6513a466",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08752e1ee6513a466",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665832050599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-tenant-2-subnet",
              "Tenant": "tenant-2",
              "Type": "dedicated"
            },
            "tags_all": {
              "AZ": "us-west-2b",
              "Name": "multitenant-ai-poc-tenant-2-subnet",
              "Tenant": "tenant-2",
              "Type": "dedicated"
            },
            "vpc_id": "vpc-02192da0fc1a7dd84"
          },
          "dependencies": [
            "aws_vpc.poc_isolated",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:vpc/vpc-05e62cd728f70c2a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dca649214d9ec96a",
            "default_route_table_id": "rtb-02ac8bea8262f894a",
            "default_security_group_id": "sg-05fac7646091dc485",
            "dhcp_options_id": "dopt-071269367ca134a55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e62cd728f70c2a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ac8bea8262f894a",
            "owner_id": "665832050599",
            "tags": {
              "Name": "multitenant-ai-poc-vpc"
            },
            "tags_all": {
              "Name": "multitenant-ai-poc-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc_isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:665832050599:vpc/vpc-02192da0fc1a7dd84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01210e122241821f2",
            "default_route_table_id": "rtb-026d10ebb44048e52",
            "default_security_group_id": "sg-06cd1d3a976ab7595",
            "dhcp_options_id": "dopt-071269367ca134a55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02192da0fc1a7dd84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026d10ebb44048e52",
            "owner_id": "665832050599",
            "tags": {
              "DataIsolation": "strict",
              "Environment": "poc",
              "Name": "multitenant-ai-poc-poc-isolated-vpc"
            },
            "tags_all": {
              "DataIsolation": "strict",
              "Environment": "poc",
              "Name": "multitenant-ai-poc-poc-isolated-vpc"
            }
          }
        }
      ]
    }
  ]
}